# pigz

./: .gitignore  .gitmodules  CMakeLists.txt  pigz.c  premake4.lua  readme.md  win_compat.h  yarn.c  yarn_win.c
pthread-win32/: pthread.h
scripts/: build.bat  build.py  util.py
win32/: compat.h  dirent.c  wincompat.h
zlib/: premake4.lua
